# backend

./: .gitignore  AGENTS.md  AWS_SETUP.md  README.md  flake.nix  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yml
.ralph/: ralph-history.json  ralph-loop.state.json
docs/: AWS.md  README.md
integrations/: CanvasJsonFormat.json  canvas.py
lib/backend_placeholder/: AGENTS.md  agent.py  api.py  database.py  models.py  server.py  state.py
lib/backend_placeholder/integrations/: AGENTS.md  canvas.py  enrich_openalex.py
lib/backend_placeholder/nodes/: AGENTS.md  enrich_openalex.py  extract_graph.py  link_canvas.py  mkgraph.py  retry_flow.py  schema_options.py  validate_graph.py
lib/backend_placeholder/services/: AGENTS.md  errors.py  extract_service.py  path_safety.py  query_service.py  textract_adapter.py  upload_service.py
lib/document_processor/: __init__.py  api.py  models.py  parser.py  textract_client.py
nix/: docker.nix  overlay.nix  shell.nix
tests/: testCanvas.py
tests/document_processor/: TESTING.md  run_curl_upload_tests.sh  test_api.py  test_integration.py  test_models.py  test_parser.py  test_textract_client.py  test_upload_api.py
tests/document_processor/test_files/: bash.sh  docxfile.docx  pptxfile.pptx  txtfile.txt
