[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "python-dotenv",
  "pdfplumber",
  "fastapi",
  "uvicorn",
  "pytest",
]
name = "backend_placeholder"
version = "1.0.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["lib"]

[project.scripts]
deploy-backend = "backend_placeholder.server:serve"
