[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "backend_placeholder"
version = "1.0.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["lib"]

[project.scripts]
deploy-backend = "backend_placeholder.server:runner"

[tool.ruff]
extend-exclude = ["*.py", "^.*$"]
force-exclude = true
line-length = 320
indent-width = 2

[tool.pylint.master]
ignore-paths = ["^.*$"]
